--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <main>
         <div class="passo ativo" id="passo-0">
             <img src="img/cenario-passo0.png" alt="">
-            <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las!</p>
-            <button class="btn-proximo" data-proximo="1">Rio de Janeiro</button>
-            <button class="btn-proximo" data-proximo="2">Pernambuco</button>
+            <p>Você estava em casa, tranquilo fazendo alguma coisa que você gosta em seu quarto, e tão de repente, você escuta sons estranhos perto de você, e ao checar, encontrou um rastro que levava para fora do seu quarto</p>
+            <button class="btn-proximo" data-proximo="1">Seguir o rastro</button>
+            <button class="btn-proximo" data-proximo="2">Ligar para alguém</button>
         </div>
         <div class="passo" id="passo-1">
-            <p>Você começa sua jornada no Rio de Janeiro, subindo o Pico da Tijuca ao amanhecer para encontrar a primeira pista.</p>
-            <button class="btn-proximo" data-proximo="3">Procurar a pista no topo do pico</button>
-            <button class="btn-proximo" data-proximo="4">Desistir e voltar para casa</button>
+            <p>Ao seguir o rastro, sente um cheiro esquisito, vindo da cozinha, enquanto o rastro desaparece..</p>
+            <button class="btn-proximo" data-proximo="3">Procurar na cozinha</button>
+            <button class="btn-proximo" data-proximo="4">Fugir da casa</button>
         </div>
         <div class="passo" id="passo-2">
             <p>Em Pernambuco, você visita a histórica cidade de Olinda. Na carta, uma das pistas indica que para localizar a entrada para a cidade perdida você deve procurar a próxima pista em um dos pontos turísticos da cidade. Por qual você começa?</p>
@@ -28,15 +28,13 @@
             <button class="btn-proximo" data-proximo="6">Explorar as praias próximas</button>
         </div>
         <div class="passo" id="passo-3">
-            <p>No topo do Pico da Tijuca, você encontra uma antiga inscrição apontando que a próxima pista está
-                localizada no Amazonas.</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+            <p>Você escutou um parente seu pedindo por sua ajuda, atrás da bancada</p>
+            <button class="btn-proximo" data-proximo="7">Seguir o pedido</button>
         </div>
 
         <div class="passo" id="passo-4">
             <img src="img/cenario-passo4-voltar-casa.png" alt="imagem voltando para casa e desitindo da aventura">
-            <p>Você decide que a aventura é grande demais e volta para casa, mas sempre se pergunta o que teria
-                encontrado.</p>
+            <p>Você fugiu de sua casa, e escutou apenas alguns sons altos e agudos vindos lá de dentro, o que te fez correr mais ainda, para longe dali</p>
         </div>
 
         <div class="passo" id="passo-5">
@@ -52,8 +50,8 @@
 
         <div class="passo" id="passo-7">
             <p>No Amazonas, a busca pela cidade perdida se intensifica. Você se depara com um rio bifurcado.</p>
-            <button class="btn-proximo" data-proximo="9">Seguir pelo rio à esquerda</button>
-            <button class="btn-proximo" data-proximo="10">Seguir pelo rio à direita</button>
+            <button class="btn-proximo" data-proximo="9">Seguir para trás da bancada</button>
+            <button class="btn-proximo" data-proximo="10">Parar e esperar</button>
         </div>
 
         <div class="passo" id="passo-8">
