--- a/index.html
+++ b/index.html
@@ -66,21 +66,18 @@
         </div>
 
         <div class="passo" id="passo-10">
-            <p>O rio à direita termina em uma área pantanosa. Apesar de belas vistas, não há sinais da cidade perdida
-                aqui.</p>
-            <button class="btn-proximo" data-proximo="12">Retornar e tentar o outro rio</button>
+            <p>Você fica esperando, mas nada acontece</p>
+            <button class="btn-proximo" data-proximo="12">Retornar e ir para atrás da bancada</button>
         </div>
 
         <div class="passo" id="passo-11">
             <img src="img/cenario-passo11-cidade-perdida.png" alt="encontrando uma cidade maravilhosa perdida no Amazonas">
-            <p>Dentro da cidade perdida, você descobre tesouros inimagináveis e decide se dedicar a estudar e preservar
-                este lugar</p>
+            <p>Uma criatura salta sobre você, e você luta pela sua sobrevivência, mas sabe que seu destino não será o mais agradável</p>
         </div>
 
         <div class="passo" id="passo-12">
-            <p>Retornando e escolhendo o rio à esquerda, você finalmente encontra a cachoeira escondida e as inscrições
-                que levam à cidade perdida.</p>
-            <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
+            <p>Ao chegar ali, você observa a mão de quem te pediu a sua ajuda!</p>
+            <button class="btn-proximo" data-proximo="11">Segurar na mão</button>
         </div>
     </main>
     <script src="script.js"></script>
