--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             <button class="btn-proximo" data-proximo="4">Fugir da casa</button>
         </div>
         <div class="passo" id="passo-2">
-            <p>Em Pernambuco, você visita a histórica cidade de Olinda. Na carta, uma das pistas indica que para localizar a entrada para a cidade perdida você deve procurar a próxima pista em um dos pontos turísticos da cidade. Por qual você começa?</p>
-            <button class="btn-proximo" data-proximo="5">Investigar as igrejas antigas</button>
-            <button class="btn-proximo" data-proximo="6">Explorar as praias próximas</button>
+            <p>Você pega seu celular, mas fica indeciso sobre quem você deveria chamar</p>
+            <button class="btn-proximo" data-proximo="5">Ligar para um membro da casa</button>
+            <button class="btn-proximo" data-proximo="6">Ligar para a polícia</button>
         </div>
         <div class="passo" id="passo-3">
             <p>Você escutou um parente seu pedindo por sua ajuda, atrás da bancada</p>
-            <button class="btn-proximo" data-proximo="7">Seguir o pedido</button>
+            <button class="btn-proximo" data-proximo="7">Seguir o barulho</button>
         </div>
 
         <div class="passo" id="passo-4">
@@ -38,13 +38,12 @@
         </div>
 
         <div class="passo" id="passo-5">
-            <p>Nas igrejas de Olinda, você descobre um mapa antigo escondido atrás de um altar, apontando que a próxima
-                pista está no Amazonas.</p>
-            <button class="btn-proximo" data-proximo="7">Viajar para o Amazonas</button>
+            <p>Ao ligar para algum de seus companheiros, você não escuta nada no aúdio por um tempo, até que a ligação simplesmente falha, com um leve gemido no fundo</p>
+            <button class="btn-proximo" data-proximo="7">Ir investigar o rastro</button>
         </div>
 
         <div class="passo" id="passo-6">
-            <p>Explorando as praias, você encontra uma caverna escondida, mas ela leva a um beco sem saída.</p>
+            <p>Ao ligar para a polícia, eles pedem para que você mantenha-se calmo e não saia de onde está, mas a ligação é cortada, seguida de um ruído alto dentro da casa, você, com certo desespero, vai checar o que pode ser</p>
             <button class="btn-proximo" data-proximo="8">Voltar e explorar as igrejas</button>
         </div>
 
