--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
 
         <div class="passo" id="passo-6">
             <p>Ao ligar para a polícia, eles pedem para que você mantenha-se calmo e não saia de onde está, mas a ligação é cortada, seguida de um ruído alto dentro da casa, você, com certo desespero, vai checar o que pode ser</p>
-            <button class="btn-proximo" data-proximo="8">Voltar e explorar as igrejas</button>
+            <button class="btn-proximo" data-proximo="8">Investigar a origem do som</button>
         </div>
 
         <div class="passo" id="passo-7">
-            <p>No Amazonas, a busca pela cidade perdida se intensifica. Você se depara com um rio bifurcado.</p>
+            <p>Ao chegar na cozinha, você observa uma mão, de um parente seu, saindo por de trás da bancada</p>
             <button class="btn-proximo" data-proximo="9">Seguir para trás da bancada</button>
             <button class="btn-proximo" data-proximo="10">Parar e esperar</button>
         </div>
 
         <div class="passo" id="passo-8">
-            <p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para o Amazonas!</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+            <p>Você escuta os ruídos vindos da cozinha</p>
+            <button class="btn-proximo" data-proximo="7">Seguir para a cozinha</button>
         </div>
 
         <div class="passo" id="passo-9">
