--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
         </div>
 
         <div class="passo" id="passo-9">
-            <p>O rio à esquerda leva você a uma cachoeira escondida com inscrições antigas que revelam a entrada da
-                cidade perdida.</p>
-            <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
+            <p>Você observa apenas a mão ali, sem qualquer resquício de um corpo</p>
+            <button class="btn-proximo" data-proximo="11">Fugir dali</button>
         </div>
 
         <div class="passo" id="passo-10">
