--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-            <img src="img/cenario-passo0.png" alt="">
+            <img src="img/Cama.jpg" alt="">
             <p>Você estava em casa, tranquilo fazendo alguma coisa que você gosta em seu quarto, e tão de repente, você escuta sons estranhos perto de você, e ao checar, encontrou um rastro que levava para fora do seu quarto</p>
             <button class="btn-proximo" data-proximo="1">Seguir o rastro</button>
             <button class="btn-proximo" data-proximo="2">Ligar para alguém</button>
