--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-            <img src="img/Cama.jpg" alt="">
+            <img src="Cama.jpg" alt="Cama.jpg">
             <p>Você estava em casa, tranquilo fazendo alguma coisa que você gosta em seu quarto, e tão de repente, você escuta sons estranhos perto de você, e ao checar, encontrou um rastro que levava para fora do seu quarto</p>
             <button class="btn-proximo" data-proximo="1">Seguir o rastro</button>
             <button class="btn-proximo" data-proximo="2">Ligar para alguém</button>
@@ -33,7 +33,7 @@
         </div>
 
         <div class="passo" id="passo-4">
-            <img src="img/cenario-passo4-voltar-casa.png" alt="imagem voltando para casa e desitindo da aventura">
+            <img src="img/cen" alt="imagem voltando para casa e desitindo da aventura">
             <p>Você fugiu de sua casa, e escutou apenas alguns sons altos e agudos vindos lá de dentro, o que te fez correr mais ainda, para longe dali</p>
         </div>
 
