--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-            <img src="img/cama passo 0.jpg" alt="um dia quase tranquilo na cama">
+            <img src="img/cama-passo0.png" alt="um dia quase tranquilo na cama">
             <p>Você estava em casa, tranquilo fazendo alguma coisa que você gosta em seu quarto, e tão de repente, você escuta sons estranhos perto de você, e ao checar, encontrou um rastro que levava para fora do seu quarto</p>
             <button class="btn-proximo" data-proximo="1">Seguir o rastro</button>
             <button class="btn-proximo" data-proximo="2">Ligar para alguém</button>
@@ -33,7 +33,7 @@
         </div>
 
         <div class="passo" id="passo-4">
-            <img src="img/Rua.jpg" alt="fugindo de sua casa">
+            <img src="img/rua-passo4.png" alt="fugindo de sua casa">
             <p>Você fugiu de sua casa, e escutou apenas alguns sons altos e agudos vindos lá de dentro, o que te fez correr mais ainda, para longe dali</p>
         </div>
 
@@ -69,7 +69,7 @@
         </div>
 
         <div class="passo" id="passo-11">
-            <img src="img/Cozinha.jpg" alt="uma criatura encontra o protagonista">
+            <img src="img/cozinha-passo11.png" alt="uma criatura encontra o protagonista">
             <p>Uma criatura salta sobre você, e você luta pela sua sobrevivência, mas sabe que seu destino não será o mais agradável</p>
         </div>
 
